force-app/main/default/objects/Travel_Expense__c/Travel_Expense__c.object-meta.xml
<CustomObject>
    <label>Travel Expense</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Travel Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>