force-app/main/default/objects/Travel_Expense__c/fields/Average_Ticket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket_Cost__c</fullName>
    <label>Average Ticket Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>