force-app/main/default/objects/Travel_Expense__c/fields/Expense_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approved_On__c</fullName>
    <label>Expense Approved On</label>
    <type>DateTime</type>
</CustomField>