force-app/main/default/objects/Travel_Expense__c/fields/Number_of_Bills_Attached__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bills_Attached__c</fullName>
    <label>Number of Bills Attached?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>