force-app/main/default/objects/Travel_Expense__c/fields/Ticket_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Cost__c</fullName>
    <label>Ticket Cost</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>