force-app/main/default/objects/Travel_Expense__c/fields/Travel_was_Approved_Earlier__c.field-meta.xml
<CustomField>
    <fullName>Travel_was_Approved_Earlier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel was Approved Earlier?</label>
    <type>Checkbox</type>
</CustomField>